<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RetanguloLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetanguloFragment">

    <EditText
        android:id="@+id/etAlturaRetangulo"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etAltura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlturaRetangulo" />

    <Button
        android:id="@+id/btnCalcularPerimetroRetangulo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnCalcularPerimetro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularAreaRetangulo" />

    <TextView
        android:id="@+id/tvBaseRetangulo"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvBaseRetangulo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAlturaRetangulo" />

    <TextView
        android:id="@+id/tvAlturaRetangulo"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginTop="63dp"
        android:text="@string/tvAlturaRetangulo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcularAreaRetangulo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnCalcularArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBaseRetangulo" />

    <EditText
        android:id="@+id/etBaseRetangulo"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etBase"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseRetangulo" />

    <TextView
        android:id="@+id/tvResultadoRetangulo"
        android:layout_width="261dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularPerimetroRetangulo" />

</androidx.constraintlayout.widget.ConstraintLayout>