<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CirculoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CirculoFragment" >

    <Button
        android:id="@+id/btnCalcularPerimetroCirculo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnCalcularPerimetro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularAreaCirculo" />

    <Button
        android:id="@+id/btnCalcularAreaCirculo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnCalcularArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRaioCirculo" />

    <TextView
        android:id="@+id/tvRaioCirculo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/tvRaioCirculo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRaioCirculo"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etRaio"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRaioCirculo" />

    <TextView
        android:id="@+id/tvResultadoCirculo"
        android:layout_width="220dp"
        android:layout_height="230dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularPerimetroCirculo" />
</androidx.constraintlayout.widget.ConstraintLayout>